--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -18,9 +18,9 @@
   "eat-kano": "Eat Kano",
   "default-dfjk": "DFJK by default",
   "default-20s": "20 seconds by default",
-  "game-title": "Eat Kano",
-  "game-intro1": "Start from the bottom",
-  "game-intro2": "Can you tap 150 times?",
+  "game-title": "素质小猫",
+  "game-intro1": "从底部开始",
+  "game-intro2": "你能完成五十次吗？",
   "record-rank": "To record rank(filtered special chars)",
   "no-ad-bad-lang": "No ads or bad language(optional)",
   "time-up": "Time up",
@@ -31,12 +31,12 @@
   "home": "Home",
   "rank": "Rank",
   "repo": "Repo",
-  "text-level-1": "Try again?",
-  "text-level-2": "Not bad",
-  "text-level-3": "Nice",
-  "text-level-4": "Awesome",
-  "text-level-5": "R U kidding?",
-  "time-over": "You've cheated for ",
+  "text-level-1": "有脑干但不多",
+  "text-level-2": "脑干四肢完整健全",
+  "text-level-3": "僵尸看了看你的脑子，满意的走了",
+  "text-level-4": "牛逼，你是真牛逼",
+  "text-level-5": "举世无双天下第一乌鸦开飞机",
+  "time-over": "你多牛啊",
   "rank-title": "Eat Kano - Ranking",
   "query-record": "Query Record",
   "day-rank": "Ranking[daily]",
