--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -19,7 +19,7 @@
   "default-dfjk": "DFJK by default",
   "default-20s": "20 seconds by default",
   "game-title": "素质小猫",
-  "game-intro1": "从底部开始",
+  "game-intro1": "从底部开始点击",
   "game-intro2": "你能完成五十次吗？",
   "record-rank": "To record rank(filtered special chars)",
   "no-ad-bad-lang": "No ads or bad language(optional)",
